--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 certifi==2024.2.2
 charset-normalizer==3.3.2
+gunicorn==22.0.0
 idna==3.7
-pyTelegramBotAPI==4.18.0
+packaging==24.0
+pytelegrambotapi==4.18.0
 python-dotenv==1.0.1
 requests==2.31.0
 urllib3==2.2.1
